<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".S2">

    <TextView
        android:id="@+id/titulo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s1_titulo"
        android:textColor="@color/colorTitulos"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/saltan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/saltan_2"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="63dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/contenido2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s1_p2"
        android:textAlignment="center"
        android:textColor="@color/colorTitulos"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSiguiente2"
        android:layout_width="325dp"
        android:layout_height="63dp"
        android:background="@drawable/boton_3"
        android:fontFamily="casual"
        android:text="@string/s1_boton1"
        android:textColor="@color/colorBoton"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>
